[package]
name = "rwalker"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-rs = "0.26.1"
plain = "0.2.3"
blazesym = { version = "=0.2.3", features = ["xz"] }
clap = { version = "4.5.23", features = ["derive"] }
chrono = "0.4"
regex = "1"
anyhow = "1.0.0"
gimli = "0.32.3"
memmap2 = "0.9"
libc = "*"

[build-dependencies]
libbpf-cargo = "0.26.1"

